--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,23 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import Hero from '../components/Hero.astro';
+import Testimonials from '../components/Testimonials.astro';
+import Services from '../components/Services.astro';
+import About from '../components/About.astro';
+import CTA from '../components/CTA.astro';
+import QuoteSection from '../components/QuoteSection.astro';
+import Trust from '../components/Trust.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-	<Welcome />
+	<Hero />
+	<Testimonials />
+	<Services />
+	<About />
+	<CTA />
+	<QuoteSection />
+	<Trust />
 </Layout>
